--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,17 +17,43 @@
 }
 
 body {
+  scroll-behavior: smooth;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.heading {
+  @apply text-4xl font-bold leading-none tracking-wider text-gray-900 md:text-5xl lg:text-6xl dark:text-white uppercase;
+}
+
+.sub-heading {
+  @apply text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400 uppercase;
+}
+
+.card-heading {
+  @apply text-xl capitalize font-semibold tracking-wider
+}
+
+.card-subheading {
+  @apply text-sm text-zinc-600
+}
+
+.pills {
+  @apply absolute text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900 -top-4 right-5;
+}
+
+.btn-primary {
+  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-container dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 w-fit;
+}
+
+.btn-secondary {
+  @apply text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800 w-fit;
 }
