--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,12 +19,9 @@
 body {
   scroll-behavior: smooth;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
@@ -54,9 +51,8 @@ body {
 }
 
 .btn-primary {
-  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-container dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 w-fit;
+  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-center text-sm px-5 py-2.5 me-2 mb-2 dark:bg-container dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800;
 }
-
 .btn-secondary {
-  @apply text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800 w-fit;
+  @apply text-container border border-container py-2 text-center px-4 rounded-lg hover:bg-container hover:text-white 
 }
