--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@ body {
 }
 
 .btn-primary {
-  @apply text-white bg-container hover:bg-blue-800 font-medium rounded-lg text-center hover:text-white text-sm px-5 py-2 mb-2
+  @apply bg-container hover:bg-blue-800 font-medium rounded-lg text-center text-white text-sm px-5 py-2 mb-2
 }
 
 .btn-secondary {
